--- a/Mission_to_Mars/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars/Mission_to_Mars.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter, BeautifulSoup, and Pandas\n",
     "from splinter import Browser\n",
-    "from bs4 import BeautifulSoup as soup\n",
+    "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 96.0.4664\n",
-      "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/96.0.4664.45/chromedriver_mac64.zip\n",
-      "Driver has been saved in cache [/Users/paolamateo/.wdm/drivers/chromedriver/mac64/96.0.4664.45]\n"
+      "Current google-chrome version is 97.0.4692\n",
+      "Get LATEST chromedriver version for 97.0.4692 google-chrome\n",
+      "Driver [/Users/paolamateo/.wdm/drivers/chromedriver/mac64/97.0.4692.71/chromedriver] found in cache\n"
      ]
     }
    ],
@@ -47,27 +46,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Visit the Mars news site\n",
     "url = 'https://redplanetscience.com/'\n",
     "browser.visit(url)\n",
     "\n",
-    "# Optional delay for loading the page\n",
-    "browser.is_element_present_by_css('div.list_text', wait_time=1)"
+    "soup=bs(browser.html,'html.parser')\n",
+    "\n",
+    "title=soup.find('div', class_=\"content_title\").text\n",
+    "para=soup.find('div', class_=\"article_teaser_body\").text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JPL Space Images Featured Image"
    ]
   },
   {
@@ -76,11 +73,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert the browser html to a soup object\n",
-    "html = browser.html\n",
-    "news_soup = soup(html, 'html.parser')\n",
-    "\n",
-    "slide_elem = news_soup.select_one('div.list_text')"
+    "#Mars Featured Image\n",
+    "url= \"https://spaceimages-mars.com\"\n",
+    "browser.visit(url)\n",
+    "soup = bs(browser.html,'html.parser')"
    ]
   },
   {
@@ -100,7 +96,15 @@
     }
    ],
    "source": [
-    "slide_elem.find('div', class_='content_title')"
+    "truncated_url=soup.find('img', class_=\"headerimage\")[\"src\"]\n",
+    "featured_img_url=f\"{url}/{truncated_url}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mars Facts"
    ]
   },
   {
@@ -120,9 +124,8 @@
     }
    ],
    "source": [
-    "# Use the parent element to find the first a tag and save it as `news_title`\n",
-    "news_title = slide_elem.find('div', class_='content_title').get_text()\n",
-    "news_title"
+    "#Mars Facts\n",
+    "url= \"https://galaxyfacts-mars.com\""
    ]
   },
   {
@@ -142,304 +145,12 @@
     }
    ],
    "source": [
-    "# Use the parent element to find the paragraph text\n",
-    "news_paragraph = slide_elem.find('div', class_='article_teaser_body').get_text()\n",
-    "news_paragraph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## JPL Space Images Featured Image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visit URL\n",
-    "url = 'https://spaceimages-mars.com'\n",
-    "browser.visit(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find and click the full image button\n",
-    "full_image_elem = browser.find_by_tag('button')[1]\n",
-    "full_image_elem.click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Parse the resulting html with soup\n",
-    "html = browser.html\n",
-    "img_soup = soup(html, 'html.parser')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'image/featured/mars2.jpg'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# find the relative image url\n",
-    "img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
-    "img_url_rel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Use the base url to create an absolute url\n",
-    "featured_image = f'https://spaceimages-mars.com/{img_url_rel}'\n",
-    "featured_image"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mars Facts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Mars - Earth Comparison</td>\n",
-       "      <td>Mars</td>\n",
-       "      <td>Earth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Diameter:</td>\n",
-       "      <td>6,779 km</td>\n",
-       "      <td>12,742 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Mass:</td>\n",
-       "      <td>6.39 × 10^23 kg</td>\n",
-       "      <td>5.97 × 10^24 kg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Moons:</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Distance from Sun:</td>\n",
-       "      <td>227,943,824 km</td>\n",
-       "      <td>149,598,262 km</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                         0                1                2\n",
-       "0  Mars - Earth Comparison             Mars            Earth\n",
-       "1                Diameter:         6,779 km        12,742 km\n",
-       "2                    Mass:  6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "3                   Moons:                2                1\n",
-       "4       Distance from Sun:   227,943,824 km   149,598,262 km"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Use `pd.read_html` to pull the data from the Mars-Earth Comparison section\n",
-    "facts = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
-    "facts.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mars</th>\n",
-       "      <th>Earth</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Description</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Mars - Earth Comparison</th>\n",
-       "      <td>Mars</td>\n",
-       "      <td>Earth</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Diameter:</th>\n",
-       "      <td>6,779 km</td>\n",
-       "      <td>12,742 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Mass:</th>\n",
-       "      <td>6.39 × 10^23 kg</td>\n",
-       "      <td>5.97 × 10^24 kg</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Moons:</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Distance from Sun:</th>\n",
-       "      <td>227,943,824 km</td>\n",
-       "      <td>149,598,262 km</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Length of Year:</th>\n",
-       "      <td>687 Earth days</td>\n",
-       "      <td>365.24 days</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Temperature:</th>\n",
-       "      <td>-87 to -5 °C</td>\n",
-       "      <td>-88 to 58°C</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    Mars            Earth\n",
-       "Description                                              \n",
-       "Mars - Earth Comparison             Mars            Earth\n",
-       "Diameter:                       6,779 km        12,742 km\n",
-       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
-       "Moons:                                 2                1\n",
-       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
-       "Length of Year:           687 Earth days      365.24 days\n",
-       "Temperature:                -87 to -5 °C      -88 to 58°C"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "facts.columns=['Description', 'Mars', 'Earth']\n",
-    "facts.set_index('Description', inplace=True)\n",
-    "facts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>Description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "facts.to_html()"
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.columns=df.iloc[0]\n",
+    "df=df[1:]\n",
+    "df.set_index(df.columns[0])\n",
+    "td= df.to_html()\n",
+    "td"
    ]
   },
   {
@@ -451,18 +162,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = 'https://marshemispheres.com/'\n",
     "\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "soup=bs(browser.html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h3=soup.find_all('h3')\n",
+    "four_h3= [tag.text for tag in h3][:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +233,7 @@
        "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
