--- a/Mission_to_Mars/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,20 +81,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<div class=\"content_title\">NASA Adds Return Sample Scientists to Mars 2020 Leadership Team</div>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "truncated_url=soup.find('img', class_=\"headerimage\")[\"src\"]\n",
     "featured_img_url=f\"{url}/{truncated_url}\""
@@ -109,20 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NASA Adds Return Sample Scientists to Mars 2020 Leadership Team'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Mars Facts\n",
     "url= \"https://galaxyfacts-mars.com\""
@@ -130,16 +108,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'The leadership council for Mars 2020 science added two new members who represent the interests of scientists destined to handle and study the first samples from Red Planet.'"
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars - Earth Comparison</th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>1</th>\\n      <td>Diameter:</td>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Distance from Sun:</td>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Length of Year:</td>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,32 +162,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Applications/anaconda3/lib/python3.8/site-packages/splinter/driver/webdriver/__init__.py:519: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
-    "\n",
-    "# Get a list of all of the hemispheres\n",
-    "links = browser.find_by_css('a.product-item img')\n",
+    "browser.visit(url)\n",
     "\n",
     "# Next, loop through those links, click the link, find the sample anchor, return the href\n",
-    "for i in range(len(links)):\n",
-    "    hemisphere = {}\n",
-    "    \n",
+    "for hemi in range(len(four_h3)):\n",
+    "    hemi_dict = {}\n",
+    "\n",
     "    # We have to find the elements on each loop to avoid a stale element exception\n",
-    "    browser.find_by_css('a.product-item img')[i].click()\n",
+    "    browser.click_link_by_partial_text(four_h3[hemi])\n",
     "    \n",
-    "    # Next, we find the Sample image anchor tag and extract the href\n",
-    "    sample_elem = browser.links.find_by_text('Sample').first\n",
-    "    hemisphere['img_url'] = sample_elem['href']\n",
-    "    \n",
-    "    # Get Hemisphere title\n",
-    "    hemisphere['title'] = browser.find_by_css('h2.title').text\n",
-    "    \n",
+    "    soup= bs(browser.html, 'html.parser')\n",
+    "\n",
+    "    trunc=soup.find('img', class_=\"wide-image\")['src']\n",
+    "    hemi_dict[\"title\"]=four_h3[hemi]\n",
+    "    hemi_dict[\"img_url\"]=f\"{url}/{trunc}\"\n",
+    "\n",
     "    # Append hemisphere object to list\n",
-    "    hemisphere_image_urls.append(hemisphere)\n",
+    "    hemisphere_image_urls.append(hemi_dict)\n",
     "    \n",
     "    # Finally, we navigate backwards\n",
     "    browser.back()"
@@ -217,23 +201,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'img_url': 'https://marshemispheres.com/images/full.jpg',\n",
-       "  'title': 'Cerberus Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg',\n",
-       "  'title': 'Schiaparelli Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg',\n",
-       "  'title': 'Syrtis Major Hemisphere Enhanced'},\n",
-       " {'img_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg',\n",
-       "  'title': 'Valles Marineris Hemisphere Enhanced'}]"
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com//images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com//images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com//images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://marshemispheres.com//images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
